# arxiv-paper-pipeline

./: ES_OPTIMIZATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: __init__.py  default.yaml  es_index_config.json
data/: download_progress.json  processed_files.json
scripts/: init_es.py  init_kafka.py  migrate_es_routing.py  test_es_search.py  verify_es_requests.py
src/: main.py
src/downloader/: arxiv_downloader.py
src/kafka/: __init__.py  consumer.py  producer.py
src/models/: paper.py
src/parser/: html_parser.py  markdown_parser.py  mineru_api_client.py  pdf_parser.py
src/processor/: chunk_splitter.py  embed_client.py  metadata_completer.py  paper_processor.py
src/scanner/: __init__.py  file_scanner.py
src/storage/: es_client.py
src/utils/: logger.py  retry.py
